# ServiceRecover_Scheduler

./: CMakeLists.txt  LICENSE  README.md
doc/: class-diagram.html  class-diagram.md
include/recovery/: irecoveryaction.h  scheduler.h  servicerecoverystate.h
src/: irecoveryaction.cpp  main.cpp  maip.cpp  scheduler.cpp  servicediscoverystate.cpp  servicerecoverystate.cpp
test/: CMakeLists.txt  scheduler_test.cpp
